security_group/main.tf
variable "vpc_id" {
    description = "VPC ID"
}

output "sg_group_id" {
    value = aws_security_group.pointhub_sg.id
}

resource "aws_security_group" "pointhub_sg" {
    name        = "allow_web_traffic"
    description = "allow web traffic"
    vpc_id      = var.vpc_id

    ingress {
        description = "HTTPS"
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        description = "HTTP"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        description = "SSH"
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "pointhub_sg"
    }
}
